--- a/páginas/home.html
+++ b/páginas/home.html
@@ -19,7 +19,7 @@
  <h1> Biroliro's Cassino</h1>
  <P>welcome to Biroliro's betting games!</P>
  <script>
- 
+     window.alert("teste");
  </script>
 </body>
 </html>
