links dos minigames e nome do player

--- a/páginas/home.html
+++ b/páginas/home.html
@@ -18,8 +18,15 @@
 <body>
  <h1> Biroliro's Cassino</h1>
  <P>welcome to Biroliro's betting games!</P>
+ <p>Escolhe seu mini jogo abaixo:</p> 
+ <a href="./mizeraGuessing.html">Mizera Guessing!</a>
+ <br>
+ <a href="./mizeraGuessing.html">2050 Election</a>
  <script>
      window.alert("teste");
- </script>
+     let nomePlayer = window.prompt("Identifique-se:");
+     window.alert("Ola " + nomePlayer);
+     window.alert("Receba aqui TK$ 100 e divirta-se.");
+ </script> 
 </body>
 </html>
