melhorado a apresentacao do player na pagina

--- a/páginas/home.html
+++ b/páginas/home.html
@@ -24,11 +24,11 @@
     <P>welcome to Biroliro's betting games!</P>
     <script>
         let nome = window.prompt("Identifique-se:");
-        document.write(`<br>Olá ${nome}, bem vindo ao nosso cassino <br>`);
+        document.write(`<br>Olá ${nome}, bem vindo ao nosso cassino!! <br>`);
         document.write(`Receba de cortesia TK$ 100 de crédito.`);
     </script>
 
-    <p>Escolhe seu mini jogo abaixo:</p>
+    <p>Escolha seu mini jogo abaixo:</p>
     <a href="./mizeraGuessing.html">Mizera Guessing!</a>
     <br>
     <a href="./2050Election.html">2050 Election</a>
