--- a/páginas/Mizera Guessing.html
+++ b/páginas/Mizera Guessing.html
@@ -12,28 +12,104 @@
             font: normal 23pt Arial;
         }
         h1 {
-            color:white;
+            color:yellow;
+        }
+        h2 {
+            color: white;
+        }
+        input {
+            width: 150px;
+            height: 40px;
+            text-align: center;
+            background: rgb(226, 205, 133) ;
+            color: black;
+        }
+        ::-webkit-input-placeholder {
+            color: black;
+            font: 12px verdana, arial;
+        }
+        input#buttonBet{
+            width: 70px;
+            height: 40px;
+            text-align: center;
+            background: rgb(117, 117, 117) ;
+            color: rgb(255, 255, 255);
         }
     </style>
 </head>
 <body>
     <h1>Mizera Guessing</h1>
-
+    <h2>Advinhe um número de 0 a 20, e ganhe milhares de TK's</h2>
+    <input type="number" name="txtInsertedBet" id="txtInsertBet" placeholder="Quanto quer Apostar:" onfocus="this.value=''">
+    <input type="button" value="Apostar" id="buttonBet">
+    <br></br>
+    <input type="number" name="" id="txtInsertedNumber" placeholder="Insira um Número " onfocus="this.value=''" >
+    <p id="txtwarning"></p>
+    <p id="txtWrong"></p>
+    <h3 id="txtFinalMessage"></h3>
     <script>
+        let txtNumber = window.document.getElementById('txtInsertedNumber');
+        let drawnNumber;
         let wallet = Number.parseFloat(100);
-        let betAmount=50;
+        let betAmount;
+        let txtBetAmount = document.getElementById('txtInsertedBet');
         let earnedValue;
-        let percentageEarned= 0.9;
+        let percentageEarned;
         let winner = false;
-        if(winner){
-            earnedValue = betAmount * percentageEarned
-            wallet += earnedValue,
-            document.write(`Parabéns você ganhou ${earnedValue}, e agora posuui ${wallet} TK's`);
-        }
-        else{
-            wallet -= betAmount;
-            document.write(`Se Ferrou e perdeu seu dinheiro , atualmente você tem ${wallet} TK's`);
-        }
+        let n1;
+        let n;
+        let countRetry = 0;
+        drawnNumber = Math.floor(Math.random()* 20 + 1);
+        document.write(drawnNumber)
+        txtNumber.addEventListener('keydown',function(e){
+            let key = e.which || e.keyCode;
+            if (key == 13) {
+                n=this.value;
+                MainLoop();
+            }     
+        })
+        function MainLoop(){
+                    if(countRetry<5){
+                        countRetry++;
+                        n1 = Number.parseInt(n);
+                        let wrong = document.querySelector('p#txtWrong');
+                        let warning = document.querySelector('p#txtwarning');
+                        if(drawnNumber < n1){
+                            wrong.innerHTML = `O número ${n1} é maior que a chave`;
+                            warning.innerHTML = `Essa foi a sua <strong>${countRetry}º</strong> tentativa, só restam <strong>${5-countRetry} </strong>`;
+                            winner = false;
+                            Final();
+                            return;
+                        }
+                        else if(drawnNumber > n1 ){
+                            wrong.innerHTML = `O número ${n1} é menor que a chave`;
+                            warning.innerHTML = `Essa foi a sua <strong>${countRetry}º</strong> tentativa, só restam <strong>${5-countRetry} </strong>`;
+                            winner = false;
+                            Final();
+                            return;
+                        }
+                        else if(drawnNumber == n1){ 
+                            countRetry = 5;
+                            wrong.innerHTML = `Acertou Mizeravi`;
+                            warning.innerHTML = `Essa foi a sua <strong>${countRetry}º</strong> tentativa, só restam <strong>${5-countRetry} (porque você é cagado e acertou) </strong>`;
+                            winner = true;
+                            Final();
+                            return ;
+                        }
+                    }
+                }      
+            function Final(){
+                let finalMessage = document.querySelector('h3#txtFinalMessage');
+                if((winner == true) && (countRetry==5)){
+                    earnedValue = betAmount * percentageEarned;
+                    wallet += earnedValue;
+                    finalMessage.innerHTML =` Parabéns você ganhou <strong>${earnedValue}</strong>, e agora possui <strong>${wallet}TK's</strong>`;
+                }
+                else if(winner == 0 && countRetry == 5){
+                    wallet -= betAmount;
+                    finalMessage.innerHTML = ` Parabéns você acaba de nos deixar mais rico perdeu <strong>${betAmount}</strong>, e agora possui <strong>${wallet}TK's</strong>`;
+                }
+            }    
     </script>
 
 </body>
